fixed images and p tag spacing

--- a/lesson02/css/base.css
+++ b/lesson02/css/base.css
@@ -25,7 +25,7 @@ section {
 }
 
 img {
-    width: 390px;
+    width: 100%;
 }
 
 h5 {
@@ -46,7 +46,10 @@ a {
     width: 10rem;
     text-align: center;
     font-size: large;
+}
 
+p {
+    padding: 10px;
 }
 
 
